Committing assets since stashing them leads to webpack chunk issue and breaks the block

--- a/assets/css/blocks/ba-slider.css
+++ b/assets/css/blocks/ba-slider.css
@@ -1,1 +1,1 @@
-.wp-block-uagb-ba-slider{opacity:0.5;background-color:red}.ba-slider-label-before,.ba-slider-label-after{margin:0}.ba-slider-label-before figcaption,.ba-slider-label-after figcaption{background:#fff;border:1px solid #c0c0c0;border-radius:12px;color:#2e3452;opacity:0.8;padding:12px;position:absolute;top:50%;transform:translateY(-50%);line-height:100%}.ba-slider-label-before figcaption{left:12px}.ba-slider-label-after figcaption{right:12px}
+.uagb-ba-slider__figure-before,.uagb-ba-slider__figure-after{margin:0}.uagb-ba-slider__figure-before figcaption,.uagb-ba-slider__figure-after figcaption{border:1px solid #c0c0c0;border-radius:12px;padding:12px;position:absolute;transform:translateY(-50%);line-height:100%}
